--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <!--First Row-->
                     <div class="my-3">
                         <span class="inter-font text-lg font-medium text-[#03071280]">A</span>
-                        <kbd
+                        <kbd onclick="disable(this)"
                             class="seat cursor-pointer ml-4 kbd bg-[#f7f8f8] w-[110px] py-2 rounded-xl text-center  inter-font text-lg font-medium text-[#03071280]"><span>A1</span></kbd>
                         <kbd
                             class="seat ml-4 kbd cursor-pointer bg-[#f7f8f8] w-[110px] py-2 rounded-xl text-center  inter-font text-lg font-medium text-[#03071280] mr-4"><span>A2</span></kbd>
@@ -401,14 +401,14 @@
                             <div class="label">
                                 <span class="label-text text-base font-semibold inter-font py-2">Phone Number*</span>
                             </div>
-                            <input type="text" placeholder="Enter your phone number"
+                            <input type="number" placeholder="Enter your phone number"
                                 class="input input-bordered lg:w-[450px] " />
                         </label>
                         <label class="form-control w-[445px] max-w-xs">
                             <div class="label">
                                 <span class="label-text text-base font-semibold inter-font py-2">Email ID</span>
                             </div>
-                            <input type="text" placeholder="Enter your email id"
+                            <input type="email" placeholder="Enter your email id"
                                 class="input input-bordered lg:w-[450px] " />
                         </label>
                         <!-- The button to open modal -->
